--- a/spa/src/App/templates/layout/default.phtml
+++ b/spa/src/App/templates/layout/default.phtml
@@ -55,7 +55,7 @@ endif;
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <!-- Brand -->
-                    <a class="navbar-brand" href="<?=$this->url()?>">
+                    <a class="navbar-brand" href="https://art13.eu">
                         <img src="/assets/img/1113.png" alt="art13.eu" height="28" />
                     </a>
                 </div>
