--- a/spa/src/App/templates/layout/manager.phtml
+++ b/spa/src/App/templates/layout/manager.phtml
@@ -51,7 +51,7 @@ endif;
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <!-- Brand -->
-                    <a class="navbar-brand" href="<?=$this->url('home')?>">
+                    <a class="navbar-brand" href="https://art13.eu">
                         <img src="/assets/img/1113.png" alt="art11.eu" height="28" />
                     </a>
                 </div>
