--- a/spa/src/App/templates/layout/default.phtml
+++ b/spa/src/App/templates/layout/default.phtml
@@ -80,6 +80,9 @@ endif;
                             <li class="nav-item">
                                 <a href="<?=$this->url('spa.spa-petition.list')?>" class="nav-link"><?=$this->translate("Petitions");?></a>
                             </li>
+                            <li class="nav-item">
+                                <a href="<?=$this->url('manager.article.list')?>" class="nav-link"><?=$this->translate("Articles");?></a>
+                            </li>
                         <?php endif;?>
                     </ul>
                     <ul class="navbar-nav navbar-right">
