--- a/spa/src/Common/templates/common-manager/common-manager-partial/partial-header.phtml
+++ b/spa/src/Common/templates/common-manager/common-manager-partial/partial-header.phtml
@@ -1,5 +1,5 @@
 <?php foreach($heading as $header): ?>
-    <div class="<?=$header['wrapper_class'];?>">
+    <div class="<?=($header['wrapper_class'])??null;?>">
         <?php if(array_key_exists('html_tag',$header) && array_key_exists('text',$header)): ?>
             <?=sprintf(
                 '<%1$s class="%2$s">%3$s%4$s</%1$s>',
