--- a/spa/public/assets/css/theme-manager.css
+++ b/spa/public/assets/css/theme-manager.css
@@ -1,23 +1,45 @@
 body {
-
+    margin-bottom: 60px;
 }
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #212121;
+    border-top: 2px solid #bb9457;
+    border-color: rgba(187, 148, 87, .25);
+}
+
+body.app-theme-manager {
+    background-color: #242425;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23474747' fill-opacity='0.35'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+}
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #212121;
+    border-top: 2px solid #bb9457;
+    border-color: rgba(187, 148, 87, .25);
+}
+
 @font-face {
     font-family: 'steelfish';
     src: url('/assets/font/steelfish.ttf') format('truetype');
 }
-body.app-theme-art13,
-body.app-theme-default.action-login,
-body.app-theme-default.action-register {
-    background-color: #990009;
-    background-image: url('/assets/img/protest_2.jpg');
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    background-position: left top;
-    background-attachment: fixed;
-    padding-top:80px;
 
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-}
 .action-login .navbar-light,
 .action-register .navbar-light {
     height:80px;
@@ -31,9 +53,8 @@ body.app-theme-default.action-register {
     color:#fefefe;
     font-family: 'steelfish', Arial, sans-serif;
 }
-body.app-theme-art13 div[role="main"] .app-container-content,
-.action-login div[role="main"] .app-container-content,
-.action-register div[role="main"] .app-container-content {
+body.app-theme-manager div[role="main"] .app-container-content
+{
     border-radius: 3px;
     margin-top: 10px;
     margin-bottom: 50px;
@@ -77,8 +98,8 @@ body.app-theme-art13 div[role="main"] .app-container-content,
 #ha1 {
     font-size: 5rem;
 }
-#ha1, h1, h2, h3 {
-    font-family: 'steelfish', Arial, sans-serif;
+.display-5 {
+    font-family: 'stezelfish', Arial, sans-serif;
 }
 
 hr {
