--- a/spa/src/App/templates/layout/default.phtml
+++ b/spa/src/App/templates/layout/default.phtml
@@ -130,6 +130,6 @@ endif;
 
     <?=$this->inlineScript()?>
 
-
+    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
 </body>
 </html>
