--- a/spa/src/App/templates/layout/manager.phtml
+++ b/spa/src/App/templates/layout/manager.phtml
@@ -126,5 +126,8 @@ endif;
 </footer>
 
     <?=$this->inlineScript()?>
+
+    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
+
 </body>
 </html>
