[WIP] CReate works as expected. except standalone petiion-translation. it needs form factory for petition-attachment

--- a/spa/public/assets/css/theme-art13-1.css
+++ b/spa/public/assets/css/theme-art13-1.css
@@ -18,6 +18,9 @@ body {
     background-color: #212121;
 }
 
+main {
+    margin-top: 80px;
+}
 
 /* Custom page CSS
 -------------------------------------------------- */
