--- a/spa/src/Common/templates/common-admin/common-admin-partial/partial-header.phtml
+++ b/spa/src/Common/templates/common-admin/common-admin-partial/partial-header.phtml
@@ -1,5 +1,5 @@
 <?php foreach($heading as $header): ?>
-    <div class="d-flex justifry-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
+    <div class="d-block pb-2 mb-3 ">
         <?php
             if(array_key_exists('html_tag',$header) && array_key_exists('text',$header)):
         ?>
