--- a/spa/src/Event/templates/event-admin/template-create.phtml
+++ b/spa/src/Event/templates/event-admin/template-create.phtml
@@ -1,6 +1,4 @@
-<div class="app-container app-register border-3">
-
-
+<div class="app-container app-template-create border-3">
 
     <div class="app-container-content p-4 p-md-5">
         <div class="app-container-header">
