--- a/spa/src/Event/templates/event-admin/template-event_group-create-form.phtml
+++ b/spa/src/Event/templates/event-admin/template-event_group-create-form.phtml
@@ -2,9 +2,6 @@
 
 $form->prepare();
 
-//  fieldset_event
-//  fieldset_event_details
-
 ?>
 
 <?=$this->form()->openTag($form);?>
@@ -13,7 +10,7 @@ $form->prepare();
 <?=$this->formElementErrors($form->get('csrf'));?>
 
 <div>
-    <div class="container pt-2">
+    <div class="container-fluid pt-2">
 
         <div class="row">
             <div class="col-12 col-md-10 py-2 px-0 text-justify">
