--- a/spa/src/PageLayout/templates/page-layout/petitions.phtml
+++ b/spa/src/PageLayout/templates/page-layout/petitions.phtml
@@ -85,13 +85,13 @@ endif;
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="<?=$this->url('spa.spa-petition.list')?>" class="nav-link">
+                                <a href="<?=$this->url('manager.petition.list')?>" class="nav-link">
                                     Petycje
                                 </a>
                             </li>
                             </li>
                             <li class="nav-item">
-                                <a href="<?=$this->url('spa.spa-petition.list')?>" class="nav-link">
+                                <a href="<?=$this->url('manager.petition.list')?>" class="nav-link">
                                     Wydarzenia
                                 </a>
                             </li>
