--- a/spa/src/App/templates/layout/art13-1.phtml
+++ b/spa/src/App/templates/layout/art13-1.phtml
@@ -41,11 +41,6 @@ endif;
     <?=$this->headTitle('Art. 11')->setSeparator(' - ')->setAutoEscape(false)?>
     <?=$this->headMeta()?>
     <?=$this->headLink()?>
-    <style>
-        body { padding-top: 70px; }
-        .app { min-height: 100vh; }
-        .app-footer { padding-bottom: 1em; }
-    </style>
 </head>
 
 <body class="app app-theme-art13 <?=(isset($bodyClass))?$bodyClass:null;?>">
@@ -96,16 +91,16 @@ endif;
                         <li class="nav-item">
                             <a href="<?=$this->url('home')?>" class="nav-link"><?=$this->translate("Homepage");?></a>
                         </li>
-                        <?php if( ! $this->hasIdentity()):?>
-
-                        <?php else: ?>
-                            <li class="nav-item">
-                                <a href="<?=$this->url('manager.event.list')?>" class="nav-link"><?=$this->translate("Events");?></a>
-                            </li>
-                        <?php endif;?>
+                        <li class="nav-item">
+                            <a href="<?=$this->url('home')?>#events" class="nav-link"><?=$this->translate("Events");?></a>
+                        </li>
 
                         <li class="nav-item">
                             <a href="http://peticio.art13.eu" class="nav-link"><?=$this->translate("Petition");?></a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a href="<?=$this->url('home')?>#information" class="nav-link"><?=$this->translate("Information");?></a>
                         </li>
 
                     </ul>
@@ -124,8 +119,23 @@ endif;
                         </li>
 
                     </ul>
-                    <ul class="navbar-nav navbar-right align-middle">
+                    <ul class="navbar-nav navbar-right align-right">
                         <?php if( $this->hasIdentity()):?>
+                            <li class="nav-item ml-3">
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-info"><?=$this->translate("Manage");?></button>
+                                    <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <span class="sr-only">Toggle Dropdown</span>
+                                    </button>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="<?=$this->url('manager.event.list')?>"><?=$this->translate("Events");?></a>
+                                        <a class="dropdown-item" href="<?=$this->url('manager.petition.list')?>"><?=$this->translate("Petitions");?></a>
+                                        <a class="dropdown-item" href="<?=$this->url('manager.article.list')?>"><?=$this->translate("Articles");?></a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="#"><?=$this->translate("Your Account");?></a>
+                                    </div>
+                                </div>
+                            </li>
                             <li class="nav-item ml-3">
                                 <a href="<?=$this->url('spa.auth.logout')?>" class="nav-link btn btn-sm btn-secondary text-light"><?=$this->translate("Sign Out");?></a>
                             </li>
