--- a/spa/src/App/templates/layout/default.phtml
+++ b/spa/src/App/templates/layout/default.phtml
@@ -40,11 +40,6 @@ endif;
     <?=$this->headTitle('11/13')->setSeparator(' - ')->setAutoEscape(false)?>
     <?=$this->headMeta()?>
     <?=$this->headLink()?>
-    <style>
-        body { padding-top: 70px; }
-        .app { min-height: 100vh; }
-        .app-footer { padding-bottom: 1em; }
-    </style>
 </head>
 <body class="app app-theme-default <?=(isset($bodyClass))?$bodyClass:null;?>">
     <header class="app-header">
@@ -78,11 +73,22 @@ endif;
                                 <a href="<?=$this->url('manager.event.list')?>" class="nav-link"><?=$this->translate("Events");?></a>
                             </li>
                             <li class="nav-item">
-                                <a href="<?=$this->url('spa.spa-petition.list')?>" class="nav-link"><?=$this->translate("Petitions");?></a>
+                                <a href="<?=$this->url('manager.petition.list')?>" class="nav-link"><?=$this->translate("Petitions");?></a>
                             </li>
                             <li class="nav-item">
                                 <a href="<?=$this->url('manager.article.list')?>" class="nav-link"><?=$this->translate("Articles");?></a>
                             </li>
+                            <li class="nav-item">
+                                <div class="dropdown">
+                                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Manage
+                                    </button>
+                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                        <a class="dropdown-item" href="#">Action</a>
+                                        <a class="dropdown-item" href="#">Another action</a>
+                                        <a class="dropdown-item" href="#">Something else here</a>
+                                    </div>
+                                </div>                            </li>
                         <?php endif;?>
                     </ul>
                     <ul class="navbar-nav navbar-right">
