--- a/spa/src/App/templates/layout/manager.phtml
+++ b/spa/src/App/templates/layout/manager.phtml
@@ -8,19 +8,18 @@ $this->headLink()
 $this->inlineScript()
     ->prependFile('https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js')
     ->prependFile('https://code.jquery.com/jquery-3.3.1.min.js')
-//    ->prependFile('/assets/js/popper.js')
-    ->appendFile('/assets/js/bootstrap-multgm
-    iselect.js')
+    ->prependFile('/assets/js/popper.min.js')
+    ->appendFile('/assets/js/bootstrap-multiselect.js')
 ;
 
 if($this->hasIdentity()):
 
     $this->inlineScript()
-        ->appendFile('/assets/js/spa-editor.js')
-        ->appendFile('/assets/js/secalith-zf-core.js')
-        ->appendFile('/assets/js/secalith-zf-form.js')
-        ->appendFile('/assets/js/spa-form.js')
-        ->appendFile('/assets/js/spa-init.js')
+//        ->appendFile('/assets/js/spa-editor.js')
+//        ->appendFile('/assets/js/secalith-zf-core.js')
+//        ->appendFile('/assets/js/secalith-zf-form.js')
+//        ->appendFile('/assets/js/spa-form.js')
+//        ->appendFile('/assets/js/spa-init.js')
     ;
 
 endif;
@@ -36,16 +35,11 @@ endif;
     <?=$this->headTitle('11/13')->setSeparator(' - ')->setAutoEscape(false)?>
     <?=$this->headMeta()?>
     <?=$this->headLink()?>
-    <style>
-        body { padding-top: 70px; }
-        .app { min-height: 100vh; }
-        .app-footer { padding-bottom: 1em; }
-    </style>
 </head>
 <body class="app app-theme-manager <?=(isset($bodyClass))?$bodyClass:null;?>">ss
     <header class="app-header">
         <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top" role="navigation">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="#navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -68,23 +62,31 @@ endif;
                                 <a href="<?=$this->url('manager.event.list')?>" class="nav-link"><?=$this->translate('Events');?></a>
                             </li>
                             <li class="nav-item">
-                                <a href="<?=$this->url('spa.spa-petition.list')?>" class="nav-link"><?=$this->translate("Petitions");?></a>
+                                <a href="<?=$this->url('manager.petition.list')?>" class="nav-link"><?=$this->translate("Petitions");?></a>
                             </li>
                             <li class="nav-item">
                                 <a href="<?=$this->url('manager.article.list')?>" class="nav-link"><?=$this->translate("Articles");?></a>
                             </li>
                         <?php endif;?>
                     </ul>
-                    <ul class="navbar-nav navbar-right">
-                        <?php if( ! $this->hasIdentity()):?>
-                            <li class="nav-item mr-2">
-                                <a href="<?=$this->url('manager.register')?>" class="nav-link btn btn-sm btn-secondary text-light"><?=$this->translate('Sign Up');?></a>
+                    <ul class="navbar-nav navbar-right align-right">
+                        <?php if( $this->hasIdentity()):?>
+                            <li class="nav-item ml-3">
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-info"><?=$this->translate("Manage");?></button>
+                                    <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <span class="sr-only">Toggle Dropdown</span>
+                                    </button>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="<?=$this->url('manager.event.list')?>"><?=$this->translate("Events");?></a>
+                                        <a class="dropdown-item" href="<?=$this->url('manager.petition.list')?>"><?=$this->translate("Petitions");?></a>
+                                        <a class="dropdown-item" href="<?=$this->url('manager.article.list')?>"><?=$this->translate("Articles");?></a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="#"><?=$this->translate("Your Account");?></a>
+                                    </div>
+                                </div>
                             </li>
-                            <li class="nav-item">
-                                <a href="<?=$this->url('spa.auth')?>" class="nav-link btn btn-sm btn-secondary text-light"><?=$this->translate('Sign In');?></a>
-                            </li>
-                        <?php else: ?>
-                            <li class="nav-item">
+                            <li class="nav-item ml-3">
                                 <a href="<?=$this->url('spa.auth.logout')?>" class="nav-link btn btn-sm btn-secondary text-light"><?=$this->translate("Sign Out");?></a>
                             </li>
                         <?php endif;?>
@@ -95,7 +97,7 @@ endif;
     </header>
 
     <div class="app-content">
-        <main class="container">
+        <main class="container-fluid">
             <div class="row">
                 <div class="col-12 m-auto px-4" role="main">
                     <?=($this->content);?>
@@ -128,6 +130,12 @@ endif;
     <?=$this->inlineScript()?>
 
     <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
+
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('.bt-multiselect').multiselect();
+        });
+    </script>
 
 </body>
 </html>
