--- a/spa/src/App/templates/layout/manager.phtml
+++ b/spa/src/App/templates/layout/manager.phtml
@@ -15,11 +15,11 @@ $this->inlineScript()
 if($this->hasIdentity()):
 
     $this->inlineScript()
-//        ->appendFile('/assets/js/spa-editor.js')
-//        ->appendFile('/assets/js/secalith-zf-core.js')
-//        ->appendFile('/assets/js/secalith-zf-form.js')
-//        ->appendFile('/assets/js/spa-form.js')
-//        ->appendFile('/assets/js/spa-init.js')
+        ->appendFile('/assets/js/spa-editor.js')
+        ->appendFile('/assets/js/secalith-zf-core.js')
+        ->appendFile('/assets/js/secalith-zf-form.js')
+        ->appendFile('/assets/js/spa-form.js')
+        ->appendFile('/assets/js/spa-init.js')
     ;
 
 endif;
@@ -36,7 +36,7 @@ endif;
     <?=$this->headMeta()?>
     <?=$this->headLink()?>
 </head>
-<body class="app app-theme-manager <?=(isset($bodyClass))?$bodyClass:null;?>">ss
+<body class="app app-theme-manager <?=(isset($bodyClass))?$bodyClass:null;?>">
     <header class="app-header">
         <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top" role="navigation">
             <div class="container-fluid">
@@ -82,6 +82,9 @@ endif;
                                         <a class="dropdown-item" href="<?=$this->url('manager.petition.list')?>"><?=$this->translate("Petitions");?></a>
                                         <a class="dropdown-item" href="<?=$this->url('manager.article.list')?>"><?=$this->translate("Articles");?></a>
                                         <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="#"><?=$this->translate("Resources");?></a>
+                                        <a class="dropdown-item" href="#"><?=$this->translate("Page SEO");?></a>
+                                        <a class="dropdown-item" href="#"><?=$this->translate("Settings");?></a>
                                         <a class="dropdown-item" href="#"><?=$this->translate("Your Account");?></a>
                                     </div>
                                 </div>
@@ -100,6 +103,11 @@ endif;
         <main class="container-fluid">
             <div class="row">
                 <div class="col-12 m-auto px-4" role="main">
+                    <noscript>
+                        <div class="alert alert-danger">
+                            <p><?=$this->translate('**Warning!** The JavaScript support must be enabled.');?></p>
+                        </div>
+                    </noscript>
                     <?=($this->content);?>
                 </div>
             </div>
