--- a/spa/src/Petition/templates/petition/petition-item.phtml
+++ b/spa/src/Petition/templates/petition/petition-item.phtml
@@ -6,16 +6,16 @@
     <?php $translation = $petition['petition']['data']['translation'][0]; ?>
 <?php endif; ?>
 
-<h1><?=$translation->getTitle();?></h1>
+<h1><?=$this->markdown($translation->getTitle());?></h1>
 
 <div class="row">
     <div class="col-8">
-        <?=$translation->getText();?>
+        <?=$this->markdown($translation->getText());?>
     </div>
     <div class="col-4">
         <?php if( array_key_exists('request',$form['form'])): ?>
-            <h3><?=$this->translate("Signature has been recorded.");?></h3>
-            <p><?=$this->translate("Thank you for your support!");?></p>
+            <h3><?=$this->markdown($this->translate("Signature has been recorded."));?></h3>
+            <p><?=$this->markdown($this->translate("Thank you for your support!"));?></p>
         <?php else: ?>
             <?=$this->getFormAttached($form['form'],null,'data',true,'petition::petition-form-sign');?>
         <?php endif;?>
