[PR] removed www. from insnaces

--- a/spa/src/Event/templates/event/event-list-item.phtml
+++ b/spa/src/Event/templates/event/event-list-item.phtml
@@ -1,12 +1,12 @@
 <div class="row p-0">
     <div class="col-6  d-none d-md-inline-block block-desktop">
-        <h2 class="mb-2 displajy-4"><?=($this->currentLanguage()!==$details->getLanguage())?$details->getCityGlobal():$details->getCity();?></h2>
+        <h2 class="mb-2 display-4"><?=($this->currentLanguage()!==$details->getLanguage())?$details->getCityGlobal():$details->getCity();?></h2>
     </div>
     <div class="col-6  d-none d-md-inline-block block-desktop">
-        <span class="float-md-right mt-1 mr-0" data-countdown="2018/08/26 19:00"></span>
+        <span class="float-md-right mt-1 mr-0" _data-countdown="2018/08/26 19:00"></span>
     </div>
     <div class="col-12  d-none d-md-inline-block block-desktop">
-        <h2 class="mb-2 display-4"><?=($this->currentLanguage()!==$details->getLanguage())?$details->getNameGlobal():$details->getName();?></h2>
+        <h2 class="mb-2 display-5"><?=($this->currentLanguage()!==$details->getLanguage())?$details->getNameGlobal():$details->getName();?></h2>
 
         <div class="row p-0">
             <div class="col-6">
