[PR] worked on the homepage

--- a/spa/src/App/templates/layout/art13-1.phtml
+++ b/spa/src/App/templates/layout/art13-1.phtml
@@ -51,6 +51,7 @@ endif;
     <meta name="msapplication-TileColor" content="#efefef">
     <meta name="msapplication-config" content="https://art13.eu/assets/favicons/1113/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+    <link rel="shortcut icon" href="https://art13.eu/assets/favicons/1113/favicon-32x32.png" />
 
 </head>
 
