--- a/spa/src/Petition/templates/petition-admin/template-create-form.phtml
+++ b/spa/src/Petition/templates/petition-admin/template-create-form.phtml
@@ -55,6 +55,19 @@ $form->prepare();
 
         <div class="row">
             <div class="col-12 col-md-2 py-2 px-0 pl-md-4 pr-md-5">
+                <?=$this->formLabel($form->get('form_create')->get('fieldset_petition')->get('name_global'));?>
+            </div>
+            <div class="col-12 col-md-5 py-2 px-0 <?=( ! empty($this->formElementErrors($form->get('form_create')->get('fieldset_petition')->get('name_global'))))?'has-errors':'';?>">
+                <?=$this->formInput($form->get('form_create')->get('fieldset_petition')->get('name_global'));?>
+                <?=$this->formElementErrors($form->get('form_create')->get('fieldset_petition')->get('name_global'));?>
+            </div>
+            <div class="col-12 col-md-5 py-2 px-0 pl-md-5">
+                <small><?=$this->translate('This name will be visible on global listings.');?></small>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12 col-md-2 py-2 px-0 pl-md-4 pr-md-5">
                 <?=$this->formLabel($form->get('form_create')->get('fieldset_petition')->get('country'));?>
             </div>
             <div class="col-12 col-md-5 py-2 px-0 <?=( ! empty($this->formElementErrors($form->get('form_create')->get('fieldset_petition')->get('country'))))?'has-errors':'';?>">
@@ -131,7 +144,7 @@ $form->prepare();
                 <?=$this->formElementErrors($form->get('form_create')->get('fieldset_petition_translation')->get('description'));?>
             </div>
             <div class="col-12 col-md-5 py-2 px-0 pl-md-5">
-                <small><?=$this->translate('Would you like to publish your Petition straight away or review it first?');?></small>
+                <small><?=$this->translate('Select language of this translation.');?></small>
             </div>
         </div>
 
@@ -156,7 +169,7 @@ $form->prepare();
                 <?=$this->formElementErrors($form->get('form_create')->get('fieldset_petition_translation')->get('status'));?>
             </div>
             <div class="col-12 col-md-5 py-2 px-0 pl-md-5">
-                <small><?=$this->translate('Select language of this translation.');?></small>
+                <small><?=$this->translate('Would you like to publish your Petition straight away, or review it first?');?></small>
             </div>
         </div>
 
